fix overflow scrolling bug

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,8 @@ body {
     transform: rotate(0deg); } }
 
 @keyframes moveBee {
+  35% {
+    transform: translateY(0%); }
   35%,
   50% {
     transform: translateY(calc(-100% + 6rem)); }
@@ -148,7 +150,8 @@ body {
   height: 90%;
   width: 90%;
   max-width: 640px;
-  max-height: 640px; }
+  max-height: 640px;
+  box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.418); }
   .simulation-2__sky {
     height: 25%;
     width: 100%;
@@ -263,8 +266,11 @@ body {
   width: 90%;
   transform: translate(-50%, -50%);
   max-width: 640px;
-  max-height: 640px; }
+  max-height: 640px;
+  box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.418); }
   .animation__canvas {
+    overflow: hidden;
+    z-index: 10;
     height: 100%;
     width: 100%;
     position: relative;
@@ -305,6 +311,8 @@ body {
     .animation__button-close:active {
       box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.1); }
   .animation__mover {
+    overflow: hidden;
+    border-radius: 50%;
     height: 100%;
     width: 100%;
     position: absolute;
@@ -315,6 +323,9 @@ body {
     animation-iteration-count: infinite;
     animation-play-state: paused; }
     .animation__mover-div {
+      background-color: orange;
+      border-radius: 50%;
+      z-index: -2;
       position: relative;
       width: 100%;
       height: 100%;
@@ -382,7 +393,9 @@ body {
     cursor: pointer;
     border-bottom: 1px solid; }
   .footer__attributes {
-    visibility: visible; }
+    visibility: visible;
+    padding-top: 1.5rem; }
     .footer__attributes-hidden {
       visibility: hidden;
-      display: none; }
+      display: none;
+      height: 0; }
