--- a/sass/components/_animation.scss
+++ b/sass/components/_animation.scss
@@ -1,5 +1,4 @@
 .animation {
-  overflow: hidden;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -8,8 +7,11 @@
   transform: translate(-50%, -50%);
   max-width: 640px;
   max-height: 640px;
+  box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.418);
 
   &__canvas {
+    overflow: hidden;
+    z-index: 10;
     height: 100%;
     width: 100%;
     position: relative;
@@ -18,17 +20,13 @@
     background-size: cover;
 
     &-turner {
+      // border-radius: 50%;
       height: 100%;
       width: 100%;
     }
   }
 
   &__button-toggle {
-    // -webkit-appearance: none;
-    // -moz-appearance: none;
-    // appearance: none;
-    @include experimental(appearance, none);
-    background-color: red;
     position: absolute;
     top: 1rem;
     left: 1rem;
@@ -53,9 +51,6 @@
   }
 
   &__button-close {
-    // -webkit-appearance: none;
-    // -moz-appearance: none;
-    // appearance: none;
     padding: 3px;
     position: absolute;
     right: 1rem;
@@ -80,6 +75,9 @@
   }
 
   &__mover {
+    // background-color: purple;
+    overflow: hidden;
+    border-radius: 50%;
     height: 100%;
     width: 100%;
     position: absolute;
@@ -91,6 +89,10 @@
     animation-play-state: paused;
 
     &-div {
+      background-color: orange;
+      border-radius: 50%;
+      z-index: -2;
+      // overflow: hidden;
       position: relative;
       width: 100%;
       height: 100%;
