--- a/sass/components/_simulation-2.scss
+++ b/sass/components/_simulation-2.scss
@@ -9,6 +9,7 @@
   width: 90%;
   max-width: 640px;
   max-height: 640px;
+  box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.418);
 
   &__sky {
     height: 25%;
